added pseudo-style for single line text controls.  bug 14727