content/html/content/src/nsHTMLAtomList.h
@@ -37,6 +37,7 @@ HTML_ATOM(mozFirstLineFixup, ":-moz-first-line-fixup")
 HTML_ATOM(mozLetterFrame, ":-moz-letter-frame")
 HTML_ATOM(mozLineFrame, ":-moz-line-frame")
 HTML_ATOM(mozListBulletPseudo, ":-moz-list-bullet")
+HTML_ATOM(mozSingleLineTextControlFrame, ":-moz-singleline-textcontrol-frame")
 
 HTML_ATOM(_baseHref, NS_HTML_BASE_HREF)
 HTML_ATOM(_baseTarget, NS_HTML_BASE_TARGET)
